added html structure

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,1 +1,33 @@
-
+<footer class="footer">
+  <div class="button-home">
+    <!--boton hacia home-->
+    <img title="Home" src="./assets//images/ico-arrow.png" alt="" />
+  </div>
+  <section class="menu-link">
+    <!--menú links-->
+    <nav>
+      <ul>
+        <li>articles</li>
+        <li>books</li>
+        <li>events</li>
+        <li>reasons</li>
+        <li>tips</li>
+      </ul>
+    </nav>
+  </section>
+  <section class="social-media">
+    <nav>
+      <!--menú redes sociales-->
+      <ul>
+        <li>twitter</li>
+        <li>instagram</li>
+        <li>mastodon.social</li>
+      </ul>
+    </nav>
+  </section>
+  <section class="copy">
+    <!--copi-->
+    <p>&copy 2021</p>
+    <p>we 🧡 components</p>
+  </section>
+</footer>
