--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,8 +1,8 @@
-<header>
-  <div class="nombredelequipo">
-    <h1 class="nombre">Anonumous proxy</h1>
+<header class="header">
+  <div class="box-title">
+    <h1 class="title">Anonumous proxy</h1>
   </div>
   <section>
-    <p>In hac habitasse platea dictumst.</p>
+    <p class="subtitle">In hac habitasse platea dictumst.</p>
   </section>
 </header>
