added hamburger menu

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,9 @@
 <header class="header">
+  <div class="hamburguer">
+    <a class="img" title="Ir a la home de adalab" href="https://adalab.es/"
+      ><img src="./assets/images/ico-menu.jpg" alt="menú hamburguesa"
+    /></a>
+  </div>
   <div class="box-title">
     <h1 class="title">Anonumous proxy</h1>
   </div>
