--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,8 +1,30 @@
 .header {
-  background-image: url(..//images/cover.jpg);
-
+  display: flex;
+  flex-direction: column;
+  background-image: url(../images/cover.jpg);
   background-size: cover;
   width: 100%;
   height: 670px;
   background-position-x: center;
+  justify-content: center;
+
+  .box-title {
+    border: yellow 10px solid;
+  }
+}
+
+.hamburguer {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  background-color: #0271bc;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  .img {
+    width: 16px;
+    height: 15px;
+  }
 }
