--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -5,9 +5,16 @@
     /></a>
   </div>
   <div class="box-title">
-    <h1 class="title">Anonumous proxy</h1>
+    <h1 class="title">Anonymous proxy</h1>
   </div>
   <section>
     <p class="subtitle">In hac habitasse platea dictumst.</p>
+  </section>
+  <section class="button_img">
+    <div class="button">
+      <a class="img" title="Ir a 3 reasons to purchase" href=""
+        ><img src="./assets/images/ico-scroll-down.jpg" alt=""
+      /></a>
+    </div>
   </section>
 </header>
