--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,15 +1,13 @@
 <main class="main">
-  <section class="section-1">
+  <section class="section">
     <!--caja roja-->
-    <article>
+    <article class="section-1">
       <!--caja blanca-->
-      <p class="text"><small>frase pequeña en azul claro</small></p>
+      <p class="text"><small>Insomnia tips</small></p>
       <h2 class="title">Looking through a window</h2>
       <p class="text2">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
-        possimus explicabo, voluptatum sunt facilis aperiam iure, tempora
-        architecto tempore modi ullam repudiandae atque soluta! Consequatur quam
-        cum ut saepe nihil.
+        Donec accumsan, nulla ut voluptat portittor, quam odio tempus felis, at
+        luctus ex dim nec lectus. vivamus semper sodales rutrum.
       </p>
     </article>
     <div class="button"><p>Go</p></div>
