--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -7,24 +7,48 @@
   height: 670px;
   background-position-x: center;
   justify-content: center;
-
   .box-title {
-    border: yellow 10px solid;
+    .title {
+      font-size: 42px;
+      font-weight: bold;
+      color: #fff;
+      text-transform: uppercase;
+      line-height: $line_spacing_title;
+    }
   }
-}
+  .subtitle {
+    color: #fff;
+    margin: 10px 15px;
+  }
 
-.hamburguer {
-  display: flex;
-  width: 44px;
-  height: 44px;
-  background-color: #0271bc;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  .img {
-    width: 16px;
-    height: 15px;
+  .hamburguer {
+    display: flex;
+    width: 44px;
+    height: 44px;
+    background-color: #0271bc;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    .img {
+      width: 16px;
+      height: 15px;
+    }
+  }
+  .button_img {
+    display: flex;
+    justify-content: center;
+    margin-top: 45px;
+
+    .button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #fff;
+      width: 45px;
+      height: 45px;
+      border-radius: 22.5px;
+    }
   }
 }
