modified main and buttons

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,8 +1,6 @@
 <main class="main">
-  <section class="section">
-    <!--caja roja-->
-    <article class="section-1">
-      <!--caja blanca-->
+  <section class="section-1">
+    <article class="article">
       <p class="text"><small>Insomnia tips</small></p>
       <h2 class="title">Looking through a window</h2>
       <p class="text2">
@@ -11,41 +9,25 @@
       </p>
     </article>
     <div class="button"><p>Go</p></div>
-    <!--boton go-->
   </section>
-  <section>
+  <section class="section-2">
     <!--caja azul-->
-    <article>
-      <!--caja texto-->
-      <h2>Looking through a window</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
-        possimus explicabo, voluptatum sunt facilis aperiam iure, tempora
-        architecto tempore modi ullam repudiandae atque soluta! Consequatur quam
-        cum ut saepe nihil.
-      </p>
+    <h2 class="title">3 reasons to purchase</h2>
+    <article class="article1">
+      <h3 class="title2">Ut sed metus</h3>
+      <p class="text3">lorem ipsum dolor sit amet, consecteur.</p>
     </article>
-    <article>
+    <article class="article1">
       <!--caja texto-->
-      <h2>Looking through a window</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
-        possimus explicabo, voluptatum sunt facilis aperiam iure, tempora
-        architecto tempore modi ullam repudiandae atque soluta! Consequatur quam
-        cum ut saepe nihil.
-      </p>
+      <h3 class="title2">Curabitur ac erat</h3>
+      <p class="text3">mauris mattis urna quis lorem molestie.</p>
     </article>
-    <article>
+    <article class="article1">
       <!--caja texto-->
-      <h2>Looking through a window</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
-        possimus explicabo, voluptatum sunt facilis aperiam iure, tempora
-        architecto tempore modi ullam repudiandae atque soluta! Consequatur quam
-        cum ut saepe nihil.
-      </p>
+      <h3 class="title2">Morbi dictum</h3>
+      <p class="text3">aliquam un dolor et dolor tincidunt.</p>
     </article>
-    <div><p>More reason</p></div>
+    <div class="button2"><p>More reason</p></div>
     <!--boton more reason-->
   </section>
 </main>
