--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,11 +1,11 @@
 .main {
-  margin-left: 15px;
   text-align: start;
-  .section {
+  .section-1 {
     display: flex;
     flex-direction: column;
+    margin: 0 15px 0 15px;
 
-    .section-1 {
+    .article {
       .text {
         display: flex;
         align-items: center;
@@ -22,7 +22,7 @@
         font-size: 24px;
         font-weight: bold;
         text-transform: capitalize;
-        margin-right: 15px;
+
         height: 60px;
       }
 
@@ -47,6 +47,47 @@
       line-height: $line_spacing_button;
       font-weight: 500;
       margin: 30px 0 45px 0;
+    }
+  }
+  .section-2 {
+    background-color: #eff9ff;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    text-align: center;
+    .title {
+      grid-column: 1/4;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: $line_spacing_main;
+      text-transform: capitalize;
+      margin: 30px 15px 0;
+    }
+
+    .article1 {
+      grid-column: 1/4;
+      font-size: 18px;
+      line-height: $line_spacing_main;
+      .title2 {
+        font-weight: bold;
+        margin: 45px 68px 0;
+      }
+      .text3 {
+        margin: 0 70px;
+      }
+    }
+    .button2 {
+      grid-column: 2/3;
+      border: solid 2px #f26002;
+      background-color: #f26002;
+      color: #fff;
+      border-radius: 22.5px;
+      width: 186px;
+      height: 45px;
+      font-size: 20px;
+      line-height: $line_spacing_button;
+      font-weight: 500;
+      margin: 45px 68px 38px;
     }
   }
 }
