--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,17 +1,23 @@
 <footer class="footer">
-  <div class="button-home">
-    <!--boton hacia home-->
-    <img title="Home" src="./assets//images/ico-arrow.png" alt="" />
-  </div>
+  <aside class="button">
+    <div class="button-home">
+      <a title="Subir" href="./index.html#header">
+        <img
+          class="home"
+          title="Home"
+          src="./assets//images/ico-arrow.png"
+          alt=""
+      /></a>
+    </div>
+  </aside>
   <section class="menu-link">
-    <!--menú links-->
     <nav>
       <ul>
-        <li>articles</li>
-        <li>books</li>
-        <li>events</li>
-        <li>reasons</li>
-        <li>tips</li>
+        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>articles</li></a>
+        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>books</li></a>
+        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>events</li</a>
+        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>reasons</l></a>
+        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>tips</li></a>
       </ul>
     </nav>
   </section>
@@ -19,15 +25,15 @@
     <nav>
       <!--menú redes sociales-->
       <ul>
-        <li>twitter</li>
-        <li>instagram</li>
-        <li>mastodon.social</li>
+        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>twitter</li></a>
+        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>instagram</li></a>
+        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>mastodon.social</li></a>
       </ul>
     </nav>
   </section>
   <section class="copy">
     <!--copi-->
-    <p>&copy 2021</p>
-    <p>we 🧡 components</p>
+    <p>&copy2021</p>
+    <p class="foot">we 🧡 components</p>
   </section>
 </footer>
