--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,20 +1,49 @@
 .footer {
+  font-family: $fonttitle2;
+  font-weight: 400;
   display: flex;
   flex-direction: column;
-  border: solid 3px black;
-  .button-home {
-    border: solid 1px red;
+  align-items: center;
+  background-color: #304268;
+  color: #fff;
+  line-height: $line_spacing_main;
+  text-transform: uppercase;
+  padding: 0 15px 0 15px;
+  .button {
+    line-height: 0;
+    .button-home {
+      display: flex;
+      background-color: #fff;
+      border-radius: 22.5px;
+      width: 45px;
+      height: 45px;
+      transform: translateY(-50%);
+      justify-content: center;
+      align-items: center;
+
+      .home {
+        width: 20.6px;
+        height: 24px;
+      }
+    }
   }
 
   .menu-link {
-    border: solid 1px green;
+    margin: 37px 108px 15px;
+    padding: 0 37px;
   }
 
   .social-media {
-    border: solid 1px blue;
+    margin: 15px 71px 30px;
   }
 
   .copy {
-    border: solid 1px purple;
+    text-transform: none;
+    font-size: 14px;
+
+    .foot {
+      width: 290px;
+      margin-bottom: 45px;
+    }
   }
 }
