change font family

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -8,26 +8,23 @@
         luctus ex dim nec lectus. vivamus semper sodales rutrum.
       </p>
     </article>
+
     <div class="button"><p>Go</p></div>
   </section>
   <section class="section-2">
-    <!--caja azul-->
     <h2 class="title">3 reasons to purchase</h2>
     <article class="article1">
       <h3 class="title2">Ut sed metus</h3>
-      <p class="text3">lorem ipsum dolor sit amet, consecteur.</p>
+      <p class="text3">Lorem ipsum dolor sit amet, consecteur.</p>
     </article>
     <article class="article1">
-      <!--caja texto-->
       <h3 class="title2">Curabitur ac erat</h3>
-      <p class="text3">mauris mattis urna quis lorem molestie.</p>
+      <p class="text3">Mauris mattis urna quis lorem molestie.</p>
     </article>
     <article class="article1">
-      <!--caja texto-->
       <h3 class="title2">Morbi dictum</h3>
-      <p class="text3">aliquam un dolor et dolor tincidunt.</p>
+      <p class="text3">Aliquam un dolor et dolor tincidunt.</p>
     </article>
     <div class="button2"><p>More reason</p></div>
-    <!--boton more reason-->
   </section>
 </main>
