--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,5 +1,5 @@
 $fonttitle: "Roboto Slab", sans-serif;
-$fonttitle2: "robot", sans-serif;
+$fonttitle2: "roboto", sans-serif;
 $line_spacing_title: 55px;
 $line_spacing_main: 30px;
 $line_spacing_button: 45px;
