--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -28,7 +28,7 @@
 
       .text2 {
         color: #4a4a4a;
-        margin: 15px 15px 0 0;
+        margin-top: 15px;
         font-size: 18px;
         line-height: $line_spacing_main;
       }
@@ -74,6 +74,7 @@
       }
       .text3 {
         margin: 0 70px;
+        font-family: $fonttitle2;
       }
     }
     .button2 {
@@ -88,6 +89,7 @@
       line-height: $line_spacing_button;
       font-weight: 500;
       margin: 45px 68px 38px;
+      font-family: $fonttitle2;
     }
   }
 }
