linked hero button

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -6,7 +6,7 @@
           class="home"
           title="Home"
           src="./assets//images/ico-arrow.png"
-          alt=""
+          alt="Flecha hacia arriba"
       /></a>
     </div>
   </aside>
