--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -12,8 +12,13 @@
   </section>
   <section class="button_img">
     <div class="button">
-      <a class="img" title="Ir a 3 reasons to purchase" href=""
-        ><img src="./assets/images/ico-scroll-down.jpg" alt=""
+      <!--No entiendo pq no me dirige hacia el main cuando está bien linkeado-->
+      <a title="Ir a 3 reasons to purchase" href="./index.html#main">
+        <img
+          class="img"
+          title="Ir a 3 reasons to purchase"
+          src="./assets/images/ico-scroll-down.jpg"
+          alt="Flecha hacia bajo"
       /></a>
     </div>
   </section>
