change margin button more reason

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -25,6 +25,6 @@
       <h3 class="title2">Morbi dictum</h3>
       <p class="text3">Aliquam un dolor et dolor tincidunt.</p>
     </article>
-    <div class="button2"><p>More reason</p></div>
+    <div class="box_button"><p class="button2">More reason</p></div>
   </section>
 </main>
