tablet body made

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -5,6 +5,7 @@
     /></a>
   </div>
   <div class="box-title">
+    <!--falta que solo se pongan en dos lineas diferentes-->
     <h1 class="title">Anonymous proxy</h1>
   </div>
   <section>
