--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -13,15 +13,15 @@
   </section>
   <section class="section-2">
     <h2 class="title">3 reasons to purchase</h2>
-    <article class="article1">
+    <article class="article1 a">
       <h3 class="title2">Ut sed metus</h3>
       <p class="text3">Lorem ipsum dolor sit amet, consecteur.</p>
     </article>
-    <article class="article1">
+    <article class="article1 b">
       <h3 class="title2">Curabitur ac erat</h3>
       <p class="text3">Mauris mattis urna quis lorem molestie.</p>
     </article>
-    <article class="article1">
+    <article class="article1 c">
       <h3 class="title2">Morbi dictum</h3>
       <p class="text3">Aliquam un dolor et dolor tincidunt.</p>
     </article>
