change of button from footer to main

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -26,5 +26,16 @@
       <p class="text3">Aliquam un dolor et dolor tincidunt.</p>
     </article>
     <div class="box_button"><p class="button2">More reason</p></div>
+    <aside class="button">
+      <div class="button-home">
+        <a title="Subir" href="./index.html#header">
+          <img
+            class="home"
+            title="Home"
+            src="./assets//images/ico-arrow.png"
+            alt="Flecha hacia arriba"
+        /></a>
+      </div>
+    </aside>
   </section>
 </main>
