--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -10,23 +10,31 @@
   text-transform: uppercase;
   @media (min-width: 768px) {
     flex-direction: row;
-    justify-content: flex-end;
-    &.menu-link {
-      margin: 0;
-    }
+    justify-content: space-around;
   }
 
   .menu-link {
-    margin: 60px 0 15px;
+    margin: 60px 0 15px 10px;
+    @media (min-width: 768px) {
+      text-align: start;
+      width: 210px;
+    }
   }
-
   .social-media {
-    margin: 15px 71px 30px;
+    margin: 15px 0px 30px 0;
+    @media (min-width: 768px) {
+      text-align: start;
+      width: 210px;
+    }
   }
-
   .copy {
     text-transform: none;
     font-size: 14px;
+    @media (min-width: 768px) {
+      text-align: start;
+      width: 210px;
+      order: -1;
+    }
 
     .foot {
       margin-bottom: 45px;
