--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -66,7 +66,7 @@
       font-size: 24px;
       line-height: $line_spacing_main;
       text-transform: capitalize;
-      margin: 30px 15px 0;
+      margin: 30px 15px 45px;
 
       &:hover {
         text-decoration: underline;
@@ -116,7 +116,7 @@
         margin: 45px 68px 38px;
         font-family: $fonttitle2;
         @media (min-width: 768px) {
-          margin: 60px 0 18px 0;
+          margin: 60px 0 30px 0;
         }
       }
     }
