--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -14,7 +14,7 @@
   }
 
   .menu-link {
-    margin: 60px 0 15px 10px;
+    margin: 60px 10px 15px 10px;
     @media (min-width: 768px) {
       text-align: start;
       width: 210px;
