change header and main tablet

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -29,6 +29,9 @@
   .subtitle {
     color: #fff;
     margin: 10px 15px;
+    @media (min-width: 768px) {
+      font-size: 24px;
+    }
   }
 
   .hamburguer {
