--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -26,7 +26,7 @@
       <p class="text3">Aliquam un dolor et dolor tincidunt.</p>
     </article>
     <div class="box_button"><p class="button2">More reason</p></div>
-    <aside class="button">
+    <aside class="button1">
       <div class="button-home">
         <a title="Subir" href="./index.html#header">
           <img
