finished tablet view

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -10,6 +10,7 @@
   align-items: center;
   @media (min-width: 768px) {
     justify-content: end;
+    height: 780px;
   }
   .box-title {
     .title {
