--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -14,7 +14,7 @@
   <section class="button_img">
     <div class="button">
       <!--No entiendo pq no me dirige hacia el main cuando está bien linkeado-->
-      <a title="Ir a 3 reasons to purchase" href="./index.html#main">
+      <a title="Ir a 3 reasons to purchase" href="./index.html#section-2">
         <img
           class="img"
           title="Ir a 3 reasons to purchase"
