--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -6,6 +6,9 @@
     margin: 0 15px 0 15px;
     @media (min-width: 768px) {
       margin: 0 39px;
+      @media (min-width: 1200px) {
+        margin: 0 275px;
+      }
     }
 
     .article {
@@ -28,6 +31,10 @@
       height: 60px;
       @media (min-width: 768px) {
         font-size: 26px;
+      }
+      @media (min-width: 1200px) {
+        font-size: 32px;
+        line-height: 45px;
       }
     }
 
@@ -62,6 +69,9 @@
     @media (min-width: 768px) {
       width: 91px;
       margin-bottom: 60px;
+    }
+    @media (min-width: 1200px) {
+      width: 160px;
     }
   }
 }
