--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -93,6 +93,10 @@
     @media (min-width: 768px) {
       font-size: 26px;
     }
+    @media (min-width: 1200px) {
+      font-size: 32px;
+      line-height: 45px;
+    }
 
     &:hover {
       text-decoration: underline;
@@ -131,6 +135,9 @@
         font-size: 20px;
         margin: 0 35px;
       }
+      @media (min-width: 1200px) {
+        margin: 0 80px;
+      }
     }
   }
 
@@ -151,6 +158,9 @@
       @media (min-width: 768px) {
         margin: 60px 0 30px 0;
         width: 210px;
+      }
+      @media (min-width: 1200px) {
+        width: 255px;
       }
     }
   }
