--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -12,7 +12,9 @@
     flex-direction: row;
     justify-content: space-around;
   }
-
+  @media (min-width: 1200px) {
+    justify-content: center;
+  }
   .menu-link {
     margin: 60px 10px 15px 10px;
     @media (min-width: 768px) {
