--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,11 +1,10 @@
-<header class="header">
+<header id="header" class="header">
   <div class="hamburguer">
     <a class="img" title="Ir a la home de adalab" href="https://adalab.es/"
       ><img src="./assets/images/ico-menu.jpg" alt="menú hamburguesa"
     /></a>
   </div>
   <div class="box-title">
-    <!--falta que solo se pongan en dos lineas diferentes-->
     <h1 class="title">Anonymous proxy</h1>
   </div>
   <section>
@@ -13,7 +12,7 @@
   </section>
   <section class="button_img">
     <div class="button">
-      <!--No entiendo pq no me dirige hacia el main cuando está bien linkeado-->
+      <!--No entiendo pq no me dirige hacia el 3 Reason cuando está bien linkeado-->
       <a title="Ir a 3 reasons to purchase" href="./index.html#section-2">
         <img
           class="img"
