--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -11,7 +11,7 @@
 
     <div class="button"><p>Go</p></div>
   </section>
-  <section class="section-2">
+  <section id="section-2" class="section-2">
     <h2 class="title">3 reasons to purchase</h2>
     <article class="article1 a">
       <h3 class="title2">Ut sed metus</h3>
