--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   @media (min-width: 768px) {
-    justify-content: end;
+    justify-content: flex-end;
     height: 780px;
   }
 
