--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -2,11 +2,11 @@
   <section class="menu-link">
     <nav>
       <ul>
-        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>articles</li></a>
-        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>books</li></a>
-        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>events</li</a>
-        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>reasons</l></a>
-        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>tips</li></a>
+        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>articles</li></a>
+        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>books</li></a>
+        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>events</li</a>
+        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>reasons</l></a>
+        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>tips</li></a>
       </ul>
     </nav>
   </section>
@@ -14,9 +14,9 @@
     <nav>
       
       <ul>
-        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>twitter</li></a>
-        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>instagram</li></a>
-        <a title="Ir a la home de Adalab" href="https://adalab.es/"><li>mastodon.social</li></a>
+        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>twitter</li></a>
+        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>instagram</li></a>
+        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>mastodon.social</li></a>
       </ul>
     </nav>
   </section>
