--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,10 @@
 <header id="header" class="header">
   <div class="hamburguer">
-    <a class="img" title="Ir a la home de adalab" href="https://adalab.es/"
+    <a
+      class="img"
+      title="Ir a la home de adalab"
+      target="_blank"
+      href="https://adalab.es/"
       ><img src="./assets/images/ico-menu.jpg" alt="menú hamburguesa"
     /></a>
   </div>
