change margin responsive

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -15,14 +15,14 @@
     justify-content: center;
   }
   .menu-link {
-    margin: 60px 10px 15px 10px;
+    margin: 6vh 0vw 5vw 0vh;
     @media (min-width: 768px) {
       text-align: start;
       width: 210px;
     }
   }
   .social-media {
-    margin: 15px 0px 30px 0;
+    margin: 2vh 0vw 5vw 0vh;
     @media (min-width: 768px) {
       text-align: start;
       width: 210px;
