--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -10,6 +10,7 @@
   @media (min-width: 768px) {
     flex-direction: row;
     justify-content: space-around;
+    align-items: baseline;
   }
   @media (min-width: 1200px) {
     justify-content: center;
