--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -3,3 +3,6 @@ $fonttitle2: "roboto", sans-serif;
 $line_spacing_title: 55px;
 $line_spacing_main: 30px;
 $line_spacing_button: 45px;
+$color_button_arrow_go: #fff;
+$color_button: #f26002;
+$color_text_button1: #f26002;
