--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -2,26 +2,64 @@
   <section class="menu-link">
     <nav>
       <ul>
-        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>articles</li></a>
-        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>books</li></a>
-        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>events</li</a>
-        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>reasons</l></a>
-        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>tips</li></a>
+        <a
+          title="Ir a la home de Adalab"
+          target="_blank"
+          href="https://adalab.es/"
+          ><li>articles</li></a
+        >
+        <a
+          title="Ir a la home de Adalab"
+          target="_blank"
+          href="https://adalab.es/"
+          ><li>books</li></a
+        >
+        <a
+          title="Ir a la home de Adalab"
+          target="_blank"
+          href="https://adalab.es/"
+          ><li>events</li></a
+        >
+        <a
+          title="Ir a la home de Adalab"
+          target="_blank"
+          href="https://adalab.es/"
+          ><li>reasons</li></a
+        >
+        <a
+          title="Ir a la home de Adalab"
+          target="_blank"
+          href="https://adalab.es/"
+          ><li>tips</li></a
+        >
       </ul>
     </nav>
   </section>
   <section class="social-media">
     <nav>
-      
       <ul>
-        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>twitter</li></a>
-        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>instagram</li></a>
-        <a title="Ir a la home de Adalab" target="_blank" href="https://adalab.es/"><li>mastodon.social</li></a>
+        <a
+          title="Ir a la home de Adalab"
+          target="_blank"
+          href="https://adalab.es/"
+          ><li>twitter</li></a
+        >
+        <a
+          title="Ir a la home de Adalab"
+          target="_blank"
+          href="https://adalab.es/"
+          ><li>instagram</li></a
+        >
+        <a
+          title="Ir a la home de Adalab"
+          target="_blank"
+          href="https://adalab.es/"
+          ><li>mastodon.social</li></a
+        >
       </ul>
     </nav>
   </section>
   <section class="copy">
-    
     <p>&copy2021</p>
     <p class="foot">we 🧡 components</p>
   </section>
