--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,15 +1,17 @@
 <main class="main">
   <section class="section-1">
     <article class="article">
-      <p class="text"><small>Insomnia tips</small></p>
+      <h2 class="text">
+        <small>Insomnia tips</small>
+      </h2>
       <h2 class="title">Looking through a window</h2>
       <p class="text2">
         Donec accumsan, nulla ut voluptat portittor, quam odio tempus felis, at
-        luctus ex dim nec lectus. vivamus semper sodales rutrum.
+        luctus ex dim nec lectus, vivamus semper sodales rutrum.
       </p>
     </article>
 
-    <div class="button"><p>Go</p></div>
+    <button class="button"><p>Go</p></button>
   </section>
   <section id="section-2" class="section-2">
     <h2 class="title">3 reasons to purchase</h2>
@@ -25,7 +27,7 @@
       <h3 class="title2">Morbi dictum</h3>
       <p class="text3">Aliquam un dolor et dolor tincidunt.</p>
     </article>
-    <div class="box_button"><p class="button2">More reason</p></div>
+    <a class="box_button"><p class="button2">More reason</p></a>
     <aside class="button1">
       <div class="button-home">
         <a title="Subir" href="./index.html#header">
