--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -2,60 +2,60 @@
   <section class="menu-link">
     <nav>
       <ul>
-        <a
+        <li><a
           title="Ir a la home de Adalab"
           target="_blank"
-          href="https://adalab.es/"
-          ><li>articles</li></a
-        >
-        <a
+          href="https://adalab.es/">
+            Articles
+        </a></li>
+        <li><a
           title="Ir a la home de Adalab"
           target="_blank"
-          href="https://adalab.es/"
-          ><li>books</li></a
-        >
-        <a
+          href="https://adalab.es/">
+          books
+          </a></li>
+        <li><a
           title="Ir a la home de Adalab"
           target="_blank"
-          href="https://adalab.es/"
-          ><li>events</li></a
-        >
-        <a
+          href="https://adalab.es/">
+          Events
+        </a></li>
+        <li><a
           title="Ir a la home de Adalab"
           target="_blank"
-          href="https://adalab.es/"
-          ><li>reasons</li></a
-        >
-        <a
+          href="https://adalab.es/"></a>
+          Reasons
+        </a></li>
+        
+        <li><a
           title="Ir a la home de Adalab"
           target="_blank"
-          href="https://adalab.es/"
-          ><li>tips</li></a
-        >
+          href="https://adalab.es/">
+          Tips
+        </a></li>
       </ul>
     </nav>
   </section>
   <section class="social-media">
     <nav>
       <ul>
-        <a
+       <li><a
           title="Ir a la home de Adalab"
           target="_blank"
           href="https://adalab.es/"
-          ><li>twitter</li></a
-        >
-        <a
-          title="Ir a la home de Adalab"
+          twitter>
+        </a></li>
+        <li></li><a title="Ir a la home de Adalab"
           target="_blank"
-          href="https://adalab.es/"
-          ><li>instagram</li></a
-        >
-        <a
-          title="Ir a la home de Adalab"
+          href="https://adalab.es/"></a>
+          instagram
+        </a></li>
+        
+        <li></li><a title="Ir a la home de Adalab"
           target="_blank"
-          href="https://adalab.es/"
-          ><li>mastodon.social</li></a
-        >
+          href="https://adalab.es/">
+          mastodon.social
+        </a></li>
       </ul>
     </nav>
   </section>
