--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -60,7 +60,8 @@
     height: 45px;
     font-size: 20px;
     margin: 30px 0 45px 0;
-    &:hover {
+    background-color: #fff;
+    :hover {
       color: rgb(247, 202, 4);
       transition: color ease 1s;
     }
@@ -142,16 +143,17 @@
     grid-column: 2/3;
     margin: auto;
     .button2 {
-      background-color: $color_button;
-      color: $color_button_arrow_go;
+      background-color: $color_button_arrow_go;
+      color: $color_text_button1;
+      border: solid 2px #f26002;
       border-radius: 22.5px;
       width: 186px;
       height: 45px;
       font-size: 20px;
       line-height: $line_spacing_button;
       font-weight: 500;
-      margin: 45px 68px 38px;
-      font-family: $fonttitle2;
+      margin: 65px 68px 38px;
+
       @media (min-width: 768px) {
         margin: 60px 0 30px 0;
         width: 210px;
@@ -162,7 +164,9 @@
     }
   }
 }
+
 .button1 {
+  display: none;
   margin: auto;
   grid-column: 2/3;
   .button-home {
@@ -193,5 +197,8 @@
         }
       }
     }
+  }
+  @media (min-width: 768px) {
+    display: block;
   }
 }
